[project]
name = "document-ingestion-pipeline"
version = "1.0.0"
description = "Document ingestion, markdown conversion, and semantic search using FAISS."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "docling>=1.0.0",
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "langchain-text-splitters>=0.0.1",
    "torch>=2.0.0",
    "numpy>=1.24.0"
]

[project.scripts]
pipeline = "pipeline:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"